--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.11"
 dependencies = [
     "feature-engine>=1.9.3",
     "hydra-core>=1.3.2",
+    "matplotlib>=3.10.6",
     "pandas>=2.3.3",
     "scikit-learn>=1.7.2",
+    "seaborn>=0.13.2",
 ]
