--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "hydra-core>=1.3.2",
     "matplotlib>=3.10.6",
     "pandas>=2.3.3",
+    "pydantic>=2.11.9",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
 ]
