--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "feature-engine>=1.9.3",
     "hydra-core>=1.3.2",
     "matplotlib>=3.10.6",
+    "mlflow>=3.4.0",
     "pandas>=2.3.3",
     "pydantic>=2.11.9",
     "scikit-learn>=1.7.2",
