--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "dvc>=3.63.0",
+    "dvc[gdrive]>=3.63.0",
     "feature-engine>=1.9.3",
     "hydra-core>=1.3.2",
     "matplotlib>=3.10.6",
