--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - model: random_forest
+  - model: logistic_regression
   - tuning: grid
   - _self_
   
@@ -26,7 +26,7 @@ selection:
 tuning:
   cv_folds: 5
   n_jobs: -1
-
+  scoring: roc_auc
 
 mlflow:
   experiment_name: model_development
